# soar-store

./: README.md  components.json  encryptor.cjs  index.html  latest.md  linux.sh  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.cjs  update.ps1  vite.config.ts  vuln.ps1
.github/workflows/: greetings.yml  publish.yml  stale.yml
app/: globals.css
soap/: Cargo.toml
soap/src/: lib.rs  main.rs
src/: globals.css  index.tsx
src-ahqstore-types/: Cargo.toml  README.md
src-ahqstore-types/src/: lib.rs
src-ahqstore-types/src/api/: internet.rs  search.rs
src-ahqstore-types/src/app/: install.rs  other_fields.rs
src-ahqstore-types/src/winget/: mod.rs
src-exe-installer/: Cargo.toml  build.rs
src-exe-installer/src/: main.rs
src-exe-installer/src/daemon/: mod.rs  notification.rs  run.rs
src-service/: .gitignore  Cargo.toml
src-service/src/: authentication.rs  main.rs
src-service/src/handlers/: mod.rs
src-service/src/handlers/daemon/: dwn.rs  mod.rs  recv.rs
src-service/src/handlers/service/: http.rs
src-service/src/ipc/: linux.rs  win32.rs
src-service/src/utils/: mod.rs  structs.rs
src-setup/src/: elevate.rs  main.rs
src-setup/src/install/: download.rs  fetch.rs  mod.rs  regedit.rs
src-setup/src/uninstall/: mod.rs
src-setup/src/utils/: mod.rs
src-setup/ui/: appWindow.slint
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/assets/: install.wxs
src-tauri/src/: main.rs
src-tauri/src/app/: extract.rs  mod.rs  utils.rs  ws.rs
src-tauri/src/encryption/: cache.rs  mod.rs
src-updater/: Cargo.toml
src-updater/src/: check.rs
src/app/: Nav.tsx  icons.ts  index.tsx  server.ts
src/app/apps/: index.tsx
src/app/apps/components/: app_card.tsx  app_modal.tsx  layer.tsx  search_modal.tsx  search_results.tsx
src/app/apps/functions/: search.tsx
src/app/home/: index.tsx
src/app/home/components/: Button.tsx
src/app/package/: index.tsx
src/app/package/components/: Card.tsx
src/app/resources/api/: fetchApps.ts  os.ts  toast.ts  updateInstallWorker.ts
src/app/resources/components/: popup.tsx
src/app/resources/core/: handler.ts  http.ts  index.ts  installer.ts  (+1 more)
src/app/settings/: index.tsx
src/auth/: github.ts  hash.ts  index.ts  login.ts
src/components/ui/: context-menu.tsx
src/config/: App.tsx  Load.tsx
src/types/: index.d.ts
(+19 files in other folders)
