[package]
name = "soar-store-app"
version = "2.1.0-alpha.0"
description = "Soar Store on Tauri and Rust"
authors = ["AHQ Softwares", "Soar"]
license = "MIT"
repository = "https://github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io/"
default-run = "soar-store-app"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

tauri = { version = "2", features = [
  "devtools",
  "wry",
  "tray-icon",
  "image-png",
  "rustls-tls",
] }
wry = "*"

open = "5"
reqwest = { version = "*", features = ["blocking", "json", "rustls-tls"] }
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
lazy_static = "1"

tokio = "1"
tauri-plugin-notification = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
async-recursion = "1"
bcrypt = "0.16"
ahqstore_gh_hash = "1"
anyhow = "1.0.89"
ahqstore-types = "3.10.3"

[target.'cfg(target_os = "linux")'.dependencies]
whatadistro = "0.1.0"

[target.'cfg(all(target_os="linux",target_arch="aarch64"))'.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
